--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
       <artifactId>bcpkix-jdk15on</artifactId>
       <version>1.58</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>3.11.0</version>
+    </dependency>
+
   </dependencies>
 
   <profiles>
